--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
       "version": "0.0.0",
       "type": "module",
       "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
+            "dev": "vite",
+            "build": "vite build",
+            "preview": "vite preview"
       },
       "dependencies": {
-        "qrcode": "^1.5.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+            "qrcode": "^1.5.3",
+            "react": "^18.2.0",
+            "react-dom": "^18.2.0",
+            "serve": "^14.2.4"
       },
       "devDependencies": {
-        "@types/react": "^18.2.15",
-        "@types/react-dom": "^18.2.7",
-        "@vitejs/plugin-react": "^4.0.3",
-        "vite": "^4.4.5"
+            "@types/react": "^18.2.15",
+            "@types/react-dom": "^18.2.7",
+            "@vitejs/plugin-react": "^4.0.3",
+            "vite": "^4.4.5"
       }
-    }
+}
