--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
             "preview": "vite preview --host"
       },
       "dependencies": {
+            "@duckdb/duckdb-wasm": "^1.29.0",
             "qrcode": "^1.5.3",
             "react": "^18.2.0",
             "react-dom": "^18.2.0",
